Added UserSetting view and presenter Removed the features of UserSetting part from UserBadge view and presenter

--- a/src/com/owb/playhelp/client/view/UserBadgeView.ui.xml
+++ b/src/com/owb/playhelp/client/view/UserBadgeView.ui.xml
@@ -68,41 +68,12 @@
 		      $650 <br/>
 		    </td>
 		</tr>
-		<tr>
-		    <td colspan="2">
-		    	<g:Label styleName='{style.username}' ui:field='userNameLabel'>Loading Name...</g:Label>
-		    </td>
-		</tr>
-		<tr>
-		    <td colspan="2">
-		    	<g:Label styleName='{style.username}' ui:field='userEmailLabel'>Loading Email...</g:Label>
-		    </td>
-		</tr>
-		<tr>
-		    <td colspan="2">
-		    	<g:Label styleName='{style.username}' ui:field='userTypeLabel'>Loading Type...</g:Label>
-		    </td>
-		</tr>
-		<tr>
-		    <td>
-				<g:Anchor href='javascript:;' ui:field='loginout'>login</g:Anchor>
-			</td>
-		    <td class="adyacent">
-		 		<g:Anchor href='javascript:;' ui:field='preferences'>preferences</g:Anchor>
-			</td>
-		</tr>
-		<tr>
-		    <td>
-		    	<g:Image ui:field='socialIcons' width="100px" height="30px" resource='{res.socialIcons}' altText="Social Icons" />
-		    </td>
-		    <td class="adyacent">
-		    </td>
-		</tr>
       </table>
       
+	  <!-- 
 	   	<div class="{style.karmaDiv}">
 			<g:VerticalPanel ui:field='karmaPanel' horizontalAlignment="ALIGN_RIGHT">
 			</g:VerticalPanel>
-		</div>
+		</div> -->
 	</g:HTMLPanel>
 </ui:UiBinder> 
