--- a/src/com/owb/playhelp/client/view/MapMarkerView.ui.xml
+++ b/src/com/owb/playhelp/client/view/MapMarkerView.ui.xml
@@ -7,8 +7,8 @@
 		}
 	</ui:style>
 	<g:HTMLPanel ui:field="mainPanel">
-		<div class="{style.formTitle}"><g:Label ui:field="recordName" /></div>
-		<g:Label ui:field="recordDescription" />
+		<div class="{style.formTitle}"><g:HTML ui:field="recordName"/></div>
+		<g:HTML ui:field="recordDescription"/>
 		<div class='{style.button}'>
 			<g:Anchor href='javascript:;' ui:field='detailsBut'>Read more...</g:Anchor>
 		</div>
